Fix dark theme color contrast of syntax highlights

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -205,14 +205,14 @@
 [data-theme="dark"] .highlight .cm,
 [data-theme="dark"] .highlight .c1,
 [data-theme="dark"] .highlight .cs,
-[data-theme="dark"] .highlight .cp { color: #7e9e7e; font-style: italic; }
+[data-theme="dark"] .highlight .cp { color: #7e9e7e; }
 [data-theme="dark"] .highlight .k,
 [data-theme="dark"] .highlight .kc,
 [data-theme="dark"] .highlight .kd,
 [data-theme="dark"] .highlight .kn,
 [data-theme="dark"] .highlight .kp,
-[data-theme="dark"] .highlight .kr { color: #cc99cd; font-weight: normal; }
-[data-theme="dark"] .highlight .kt { color: #67cdcc; font-weight: normal; }
+[data-theme="dark"] .highlight .kr { color: #cc99cd; }
+[data-theme="dark"] .highlight .kt { color: #67cdcc; }
 [data-theme="dark"] .highlight .s,
 [data-theme="dark"] .highlight .sb,
 [data-theme="dark"] .highlight .sc,
@@ -232,13 +232,17 @@
 [data-theme="dark"] .highlight .mo { color: #f08d49; }
 [data-theme="dark"] .highlight .na { color: #9dafd8; }
 [data-theme="dark"] .highlight .nb { color: #9dc5d0; }
-[data-theme="dark"] .highlight .nc { color: #f8c555; font-weight: normal; }
-[data-theme="dark"] .highlight .nf { color: #f8c555; font-weight: normal; }
+[data-theme="dark"] .highlight .nc { color: #f8c555; }
+[data-theme="dark"] .highlight .nd { color: #67cdcc; }
+[data-theme="dark"] .highlight .nf { color: #f8c555; }
+[data-theme="dark"] .highlight .nl { color: #f8c555; }
+[data-theme="dark"] .highlight .nn { color: #aaa; }
 [data-theme="dark"] .highlight .no { color: #9dc5d0; }
 [data-theme="dark"] .highlight .nt { color: #e07b54; }
 [data-theme="dark"] .highlight .nv { color: #9dafd8; }
+[data-theme="dark"] .highlight .vi { color: #9dafd8; }
 [data-theme="dark"] .highlight .o,
-[data-theme="dark"] .highlight .ow { color: #67cdcc; font-weight: normal; }
+[data-theme="dark"] .highlight .ow { color: #67cdcc; }
 [data-theme="dark"] .highlight .err { color: #ff6666; background-color: transparent; }
 [data-theme="dark"] .highlight .gd { color: #ff7070; background-color: transparent; }
 [data-theme="dark"] .highlight .gi { color: #7ec699; background-color: transparent; }
